WebCore/editing/EditingStyle.h
@@ -40,8 +40,12 @@ namespace WebCore {
 class CSSStyleDeclaration;
 class CSSComputedStyleDeclaration;
 
+enum WritingDirection { NaturalWritingDirection, LeftToRightWritingDirection, RightToLeftWritingDirection };
+
 class EditingStyle : public RefCounted<EditingStyle> {
 public:
+    
+    enum ShouldPreserveWritingDirection { PreserveWritingDirection, DoNotPreserveWritingDirection };
 
     static PassRefPtr<EditingStyle> create()
     {
@@ -64,6 +68,7 @@ public:
     }
 
     CSSMutableStyleDeclaration* style() { return m_mutableStyle.get(); }
+    bool textDirection(WritingDirection&) const;
     bool isEmpty() const;
     void setStyle(PassRefPtr<CSSMutableStyleDeclaration>);
     void clear();
@@ -71,7 +76,7 @@ public:
     void removeStyleAddedByNode(Node* node);
     void removeStyleConflictingWithStyleOfNode(Node* node);
     void removeNonEditingProperties();
-    void prepareToApplyAt(const Position&);
+    void prepareToApplyAt(const Position&, ShouldPreserveWritingDirection = DoNotPreserveWritingDirection);
 
 private:
     EditingStyle();
